text align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -36,5 +36,5 @@ p{
   font-family: "Quicksand", sans-serif;
   font-style: normal;
   color: #67d0f0;
-  text-align: ;
+  text-align: center;
 }
